--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-guessing-game-example"
 version = "0.1.0"
-authors = ["Joonghyeon Kim <jhkim@waug.com>"]
+authors = ["Joonghyeon Kim <jheloper9102@gmail.com>"]
 edition = "2018"
 
 [dependencies]
